# Vivpro-Assignment

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  Vivpro Take Home Assignment.postman_collection.json  pyproject.toml
vivpro/core/: decorators.py  middleware.py  models.py  serializer.py  urls.py  views.py
vivpro/core/migrations/: 0001_initial.py  0002_musictrack_musictrack_title_29ba5d_idx_and_more.py  0003_musictrack_rating.py
vivpro/core/views/: core_views.py  music_tracks.py
vivpro/static/frontend/: package.json
vivpro/static/frontend/src/: App.css  helpers.js  index.js  routes.js  services.js
vivpro/static/frontend/src/Components/: Rating.jsx  TrackCharts.jsx  View.jsx
vivpro/vivpro/: asgi.py  settings.py  urls.py  wsgi.py
